--- a/app/employee_management_ui/webapp/i18n/i18n.properties
+++ b/app/employee_management_ui/webapp/i18n/i18n.properties
@@ -3,9 +3,21 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=EmployeeManagementUI
+appTitle=Talent Exchange
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=EmployeeManagementUI
+
+#XTXT: Text in the user button
+userName=User
+
+#XTOL: Tooltip for collapse button
+collpaseMenuButtonText=Collpase Menu
+
+#XTOL: Tooltip for Error Button
+errorButtonTooltip=Display Errors
+
+#XTOL: Tooltip for Notification Button
+notificationButtonTooltip=Display Notifications
