Added Notify Employee View

--- a/app/employee_management_ui/webapp/i18n/i18n.properties
+++ b/app/employee_management_ui/webapp/i18n/i18n.properties
@@ -21,3 +21,6 @@ errorButtonTooltip=Display Errors
 
 #XTOL: Tooltip for Notification Button
 notificationButtonTooltip=Display Notifications
+
+#XTXT: 
+ActionsTextNotifyEmployee=1. Review the details of the position and communicate to the employee. \n 2. Confirm the completion of Notification in the system using the buttons below.
