Added New Export Controls View in my tasks

--- a/app/employee_management_ui/webapp/i18n/i18n.properties
+++ b/app/employee_management_ui/webapp/i18n/i18n.properties
@@ -25,6 +25,26 @@ notificationButtonTooltip=Display Notifications
 #XTXT: 
 ActionsTextNotifyEmployee=1. Review the details of the position and communicate to the employee. \n 2. Confirm the completion of Notification in the system using the buttons below.
 
+#XTXT:
+ExportControlHead=This process is required by US Export Control Law. Goto/OCR to determine Export Controls requirements and return to this page to fill out the questionnaire. \n For any question you answer yes to, you will be required to provide an explanation of mitigations for the exposures.
+
+
+Question1=<span style='font-weight: bold;'>Question 1:</span> To the best of your personal knowledge, as part of this individual's job or proposed activity, is it likely that he or she will be exposed to the controlled technology, technical information or software source code?
+
+
+Question2=<span style='font-weight: bold;'>Question 2:</span> To the best of your personal knowledge, as part of this individual's job or proposed activity, is it likely that he or she will be exposed to the controlled technology, technical information or software source code as a peripheral part of his or her current job or proposed activity, such as by attending a general company seminar or having general technical discussions with his or her collegues?
+
+
+Question3=<span style='font-weight: bold;'>Question 3:</span> To the best of your personal knowledge, as part of this individual's job or proposed activity, is it likely that he or she will be exposed to the controlled technology, technical information or software source code by using the ExxonMobil Intranet, including SharePoint sites, etc.
+
+
+Question4=<span style='font-weight: bold;'>Question 4:</span> To the best of your personal knowledge, is it likely that this individual would be exposed to the controlled technology, technical information or software source code as a part of a job to which he or she is likely to be assigned in the near-term?
+
+#XTXT:
+MitigationQuestion=How will you mitigate these exposures? If you cannot, write "Cannot be mitigated"
+
+MitigationExample1=Ex 1: I will conduct an inital meeting with the employee to review the controlled items of concern.\nThis will be followed by an annual discussion with the employee while he is assigned to this role.\nEx 2: I will conduct a meeting on this topic with the work group so they are aware of potential areas of
+
 detailNotifyWithConcernsWarning=Clicking "Notified with Concerns" indicates the employee has been notified and there are significant changes to the position as outlined above that required receiving management and or the S&D Facilitator's intervention.  "Notified with Concerns" opens an email to the Receiving Supervisor and S&D Facilitator to start a dialog and pauses the process until the concerns have been resolved.  If your questions are typical and you do not want to delay the process, contact the Receiving Supervisor or the Contact above outside the system.
 detailNotifyEmployeeWarning=<span style='text-decoration: underline; font-weight: bold;'>Please Note</span>: Click “Employee Notified” as soon as the employee is aware of the position.  <span style='font-weight: bold;'>NOTE:</span> For expatriates, rotators, transborders and domestic relocations, upon clicking the button emails will be sent to the employee and initiate the vendor authorization process.
 detailValidateDataWarning=If you have any questions, please contact Alida (Alida) Katherine Hageymeyer <br><br><span style='text-decoration: underline; font-weight: bold;'>Please Note</span>: The data reviewed and confirmed by you will be used to update the HR system of record and GPAT. Once submitted for processing, no further changes can be made.  As the announcement toggle is set to "Yes", you are defaulted as the Announcement Initiator (you may delegate this task by editing the task and changing the Announcement Initiator name).  A subsequent email will be sent to you from GPAT with the draft announcement for review and posting per the existing process.  Alternatively, you can delegate the entire Position Validation task to another knowledgeable individual to complete by clicking “Delegate” below.
