--- a/app/employee_management_ui/webapp/i18n/i18n.properties
+++ b/app/employee_management_ui/webapp/i18n/i18n.properties
@@ -7,11 +7,29 @@ appTitle=Talent Exchange
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
+
 #XTIT: Main view title
 title=EmployeeManagementUI
 
 #XTXT: Text in the user button
 userName=User
+
+#XTXT: Text in Council Value Help Input
+EnterCouncil=Enter Council
+
+Councils=Councils
+
+# Blank title
+EnterCouncilTitle=Enter Council ID
+
+# Blank description
+EnterCouncilDescription=Enter the Council ID.
+
+# Not found title
+NotFoundTitle=Council not found
+
+# Not found description
+NotFoundDescription=No matching items found
 
 #XTOL: Tooltip for collapse button
 collpaseMenuButtonText=Collpase Menu
@@ -52,3 +70,9 @@ detailContactIfYouHaveQuestions=If you have any questions, please contact Jason 
 
 #XTXT:
 ActionsTextPositionValidation=1. Validate the data in the system for accuracy and update anything, if needed. \n 2. If you have selected to generate the anouncement from Talent Exchange, the Global Personnel Announcement Tool (GPAT) will notify you with an email and link to the announcement. 
+
+# Position Roster Title
+PositionRoster=Position Roster
+
+# Employee Roster Title
+EmployeeRoster=Employee Roster
